@@ -1,40 +1,40 @@
 Changes
-Makefile.PL
 MANIFEST
+META.yml
+Makefile.PL
 etc/www-mechanize-logo.png
 lib/WWW/Mechanize.pm
-lib/WWW/Mechanize/Link.pm
 lib/WWW/Mechanize/Examples.pod
+lib/WWW/Mechanize/Link.pm
 script/mech-forms
 t/00.load.t
 t/99.pod.t
 t/add_header.t
-t/back.t
 t/carp.t
-t/click-local.t
 t/click.t
 t/failure.t
 t/field.html
 t/field.t
 t/find_link.html
 t/find_link.t
-t/follow_link.t
-t/follow-local.t
 t/follow.t
-t/form-local.t
+t/follow_link.t
 t/form.t
-t/get-local.t
 t/get.t
 t/google.html
 t/lib/Test/HTTP/LocalServer.pm
 t/lib/Test/HTTP/log-server
+t/live/back.t
+t/live/click.t
+t/live/follow.t
+t/live/form.t
+t/live/get.t:
+t/live/reload.t
+t/live/submit.t
 t/mech-forms.t
 t/new.t
 t/page_stack.t
-t/reload-local.t
 t/reload.t
-t/submit-local.t
 t/submit.t
 t/tick.html
 t/tick.t
-META.yml                                Module meta-data (added by MakeMaker)
