@@ -1,24 +1,28 @@
 use warnings;
 use strict;
-use Test::More;
+use lib 't/lib';
+use Test::HTTP::LocalServer;
+use Test::More tests => 8;
 
-plan skip_all => "Skipping live tests" if -f "t/SKIPLIVE";
-plan tests => 8;
-
-use_ok( 'WWW::Mechanize' );
+BEGIN {
+    use_ok( 'WWW::Mechanize' );
+}
 
 my $t = WWW::Mechanize->new();
-isa_ok( $t, 'WWW::Mechanize' );
+isa_ok( $t, 'WWW::Mechanize', 'Created the object' );
 
-my $response = $t->get( "http://www.google.com/intl/en/");
+my $server = Test::HTTP::LocalServer->spawn();
+
+my $response = $t->get( $server->url );
 isa_ok( $response, 'HTTP::Response', 'Got back a response' );
-ok( $response->is_success, 'Got google' ) or die "Can't even fetch google";
+ok( $response->is_success, 'Got URL' ) or die "Can't even fetch local url";
 ok( $t->is_html );
 
-$t->field(q => "foo"); # Filled the "q" field
+$t->field(query => "foo"); # Filled the "q" field
 
-$response = $t->click("btnG");
+$response = $t->click("submit");
 isa_ok( $response, 'HTTP::Response', 'Got back a response' );
-ok( $response->is_success, "Can click 'btnG' ('Google Search' button)");
+ok( $response->is_success, "Can click 'Go' ('Google Search' button)");
 
-like($t->content, qr/foo\s?fighters/i, "Found 'Foo Fighters'");
+is( $t->field('query'),"foo", "Filled field correctly");
+
