@@ -1,24 +1,27 @@
 use warnings;
 use strict;
-use Test::More;
+use Test::More tests => 8;
 
-plan skip_all => "Skipping live tests" if -f "t/SKIPLIVE";
-plan tests => 8;
+use lib 't/lib';
+use Test::HTTP::LocalServer;
+my $server = Test::HTTP::LocalServer->spawn;
 
-use_ok( 'WWW::Mechanize' );
+BEGIN {
+    use_ok( 'WWW::Mechanize' );
+}
 
 my $t = WWW::Mechanize->new();
 isa_ok( $t, 'WWW::Mechanize', 'Created the object' ) or die;
 
-my $response = $t->get( "http://www.google.com/intl/en/");
+my $response = $t->get( $server->url );
 isa_ok( $response, 'HTTP::Response', 'Got back a response' ) or die;
-ok( $response->is_success, 'Got google' ) or die "Can't even fetch google";
+ok( $response->is_success, 'Got local page' ) or die "Can't even fetch local page";
 ok( $t->is_html );
 
-$t->field(q => "foo"); # Filled the "q" field
+$t->field(query => "foo"); # Filled the "q" field
 
 $response = $t->submit;
 isa_ok( $response, 'HTTP::Response', 'Got back a response' );
-ok( $response->is_success, "Can click 'btnG' ('Google Search' button)");
+ok( $response->is_success, "Can click 'submit' ('submit' button)");
 
-like($t->content, qr/foo\s?fighters/i, "Found 'Foo Fighters'");
+like($t->content, qr/\bfoo\b/i, "Found 'Foo'");
